ondemand tutoral fixes

--- a/20211122080630-ondemandtutorial.org
+++ b/20211122080630-ondemandtutorial.org
@@ -1,17 +1,24 @@
 :PROPERTIES:
 :ID:       0f387c73-ec41-4d83-98ce-cd677644889f
 :END:
+
+#+FILETAGS: @awkravchuk
+
 #+title: OnDemandTutorial
 
 Когда разработчик начинает исследовать какой-то инструмент у него возникают типичные вопросы вроде "Как с помощью этого я могу сделать то-то".
 
-Мы должны предугадывать их. Тогда мы сможем сделать набор туториалов вроде:
-- Как с помощью этой графической библиотеки нарисовать квадрат (выводить графические примитивы)
-- Как обрабатывать события (напр. клики мышкой) попадающие в область
-- Как сделать детекцию столновений
+Можно предугадыть их. И делать "отвечающие на вопрос" туториалы, вроде:
+- Как нарисовать квадрат
+- Как обрабатывать события (напр. клики мышкой)
+- Как сделать детекцию столновений в игре
 
-Каждый из этих простых туториалов кажется коротким (10 мин) для прохождения, а их общее количество способствует возрастанию уверенности.
+Туториалы кратки (10 мин) для прохождения, и чем больше пройдено - тем больше уверенности. Что-то неизвестное теперь выглядит как достижимая цель - нужно всего только пройти еще один туториал. И ты уже вовлечен в проект.
 
-И через некоторое время изучающему кажется что он вполне уверенно обращается с возможностями: может то, это и вот это. Когда вдруг оказывается что он чего-то не может - это выглядит как вызов и как вполне достижимая цель - нужно всего только пройти еще один туториал. И он уже вовлечен в проект.
+Такие заметки легко связать в [[https://en.wikipedia.org/wiki/Directed_acyclic_graph][DAG]] что отвечает на вопрос "опережающих ссылок" (что еще я должен изучить прежде чем понять это)
 
-Мы также можем связать такие туториал в DAG чтобы отслеживать, какие предварительные туториалы должен пройти неофит чтобы понять этот.
+Обоснование:
+
+Изучение чего-то большого выглядит как неподьемная задача, а сам процесс нуждается в постоянном подкреплении каждого шага.
+
+Кроме того это полезно и для документирования - слабосвязанный DAG проще перестраивать, чем классический учебный план.
