ondemand tutoral fixes 2

--- a/20211122080630-ondemandtutorial.org
+++ b/20211122080630-ondemandtutorial.org
@@ -6,6 +6,8 @@
 
 #+title: OnDemandTutorial
 
+* Зачем
+
 Когда разработчик начинает исследовать какой-то инструмент у него возникают типичные вопросы вроде "Как с помощью этого я могу сделать то-то".
 
 Можно предугадыть их. И делать "отвечающие на вопрос" туториалы, вроде:
@@ -17,8 +19,18 @@
 
 Такие заметки легко связать в [[https://en.wikipedia.org/wiki/Directed_acyclic_graph][DAG]] что отвечает на вопрос "опережающих ссылок" (что еще я должен изучить прежде чем понять это)
 
-Обоснование:
+* Обоснование:
 
 Изучение чего-то большого выглядит как неподьемная задача, а сам процесс нуждается в постоянном подкреплении каждого шага.
 
 Кроме того это полезно и для документирования - слабосвязанный DAG проще перестраивать, чем классический учебный план.
+
+* Как неофит я бы хотел..
+
+  для туториалов по игре:
+
+  - Развернуть проект, так чтобы он запустился (желательно однострочником)
+  - Сделать маленькое видимое изменение (заменить один персонаж на другой?)
+  - Уметь рисовать примитивы
+  - Заставить примитивы реагировать на действия пользователя
+  - ...
