ondemand tutoral fixes 3

--- a/20211122080630-ondemandtutorial.org
+++ b/20211122080630-ondemandtutorial.org
@@ -34,3 +34,5 @@
   - Уметь рисовать примитивы
   - Заставить примитивы реагировать на действия пользователя
   - ...
+
+  В идеале таким образом получить понимание того как работают все важные аспекты
