--- a/20211126121453-goffi.org
+++ b/20211126121453-goffi.org
@@ -604,6 +604,9 @@ Other stuff:
 
 *** TODO Proto
 
+Добавляем -mavx в Makefile
+Добавляем <immintrin.h> в h-файл
+
 #+BEGIN_SRC go :tangle ./proto/main.go :noweb yes
   package main
 
@@ -1081,11 +1084,13 @@ Other stuff:
       var mulA, mulX uint256b
       mulA.Mul(a, mulv1)
       mulX.Mul(x, mulv2)
-      mulX.Add(&mulX, &mulA)
-      mulA.Mul(y, &mulA)
+      mulX.Add(&mulX, &mulA)	// vpaddb // vpmaxsw
+      mulA.Mul(y, &mulA)      // vpmulld
       mulA.Div(&mulA, &mulX)
       return &mulA
   }
+
+
 
   func main() {
       var x *uint256b = NewUint256b().SetUint64(100)
@@ -1108,6 +1113,18 @@ Other stuff:
 #+BEGIN_SRC c :tangle ./proto/ctestlib/test.h :noweb yes
   #include <stdio.h>
   #include <stdlib.h>
+  #include <immintrin.h>
+
+  // written for clarity, not conciseness
+  #define OSXSAVEFlag (1UL<<27)
+  #define AVXFlag     ((1UL<<28)|OSXSAVEFlag)
+  #define VAESFlag    ((1UL<<25)|AVXFlag|OSXSAVEFlag)
+  #define FMAFlag     ((1UL<<12)|AVXFlag|OSXSAVEFlag)
+  #define CLMULFlag   ((1UL<< 1)|AVXFlag|OSXSAVEFlag)
+
+  typedef __m256i _256;
+
+  _256 AmountOut(_256 x, _256 y, _256 amount, _256 mulv1, _256 mulv2);
 
   void print_buffer(unsigned char *buf, size_t size);
 #+END_SRC
@@ -1116,11 +1133,28 @@ Other stuff:
 #+BEGIN_SRC go :tangle ./proto/ctestlib/test.c :noweb yes
   #include "test.h"
 
+  _256 AmountOut(_256 x, _256 y, _256 amount, _256 mulv1, _256 mulv2) {
+	_...mm256_loadu_si256
+  }
+
   void print_buffer(unsigned char *buf, size_t size) {
       for (uint i = 0; i < size; i++) {
           printf("%X", buf[i]);
       }
       printf("\n");
+
+      _mm256_zeroall();
+      /* Initialize the two argument vectors */
+      __m256 evens = _mm256_set_ps(2.0, 4.0, 6.0, 8.0, 10.0, 12.0, 14.0, 16.0);
+      __m256 odds = _mm256_set_ps(1.0, 3.0, 5.0, 7.0, 9.0, 11.0, 13.0, 15.0);
+
+      /* Compute the difference between the two vectors */
+      __m256 result = _mm256_sub_ps(evens, odds);
+
+      /* Display the elements of the result vector */
+      float* f = (float*)&result;
+      printf("%f %f %f %f %f %f %f %f\n",
+          f[0], f[1], f[2], f[3], f[4], f[5], f[6], f[7]);
   }
 #+END_SRC
 
