--- a/20211126121453-goffi.org
+++ b/20211126121453-goffi.org
@@ -20,7 +20,7 @@
 
 Также существует проект https://github.com/minio/c2goasm который позволяет преобразовать ассемблерные .s файлы в Go-ассемблерные. Он показывает, как сишные функции с интрисинками могут быть преобразованы в Go-ассемблер.
 
-* DONE How to get go assembly code of my Go-program
+* How to get go assembly code of my Go-program
 
 Let's start with GoLang helloworld:
 
@@ -54,13 +54,12 @@ Build it:
 
 Now we have main.asm with go assembly
 
-* START How to compile and call C-function from Go
-
+* How to compile and call C-function from Go
 ** Simple variant
 
 Если сделать import "C", то комментарий, который идет перед ним будет скомпилирован как си-код и включен в сборку.
 
-#+BEGIN_SRC go
+#+BEGIN_SRC go :tangle cgo.go
   package main
 
   //int pt(){
@@ -77,7 +76,7 @@ Now we have main.asm with go assembly
 build:
 
 #+BEGIN_SRC sh
-  env CGO_ENABLED=1 GOOS=linux go build test.go
+  env CGO_ENABLED=1 GOOS=linux go build cgo.go
   # variant with linking .o file:
   # CGO_ENABLED=1 GOOS=linux go build -buildmode=plugin -o path/to/module.so test.go
 #+END_SRC
@@ -1327,9 +1326,205 @@ compile: gcc -c -Wall -Werror -mavx512f -fpic -o ${TESTLIBPATH}/test.o ${TESTLIB
       //     f[0], f[1], f[2], f[3], f[4], f[5], f[6], f[7]);
   }
 #+END_SRC
-* TODO How I can see assembly code for only one my functions
-* TODO How I can wrote assebly functions and call it from GO?
-* START How I can call GO-function and use GO-data from my assembly code?
+
+* Assembly
+
+Для того чтобы писать ассемблерный код внутри сишного кода, который
+будет вызываться из GoLang я использую следующую последовательность действий
+- Создаю отдельный пакет ~mypkg~
+- Добавляю его в импорты, там, где буду использовать
+- Вызываю из него функции обычным образом:
+  #+BEGIN_SRC go
+    mypkg.Somefn(...)
+  #+END_SRC
+- В этом пакете импортируют С, как было указано выше:
+  #+BEGIN_SRC go
+    package mypkg
+
+    /*
+       #cgo CFLAGS: -I${SRCDIR}/ctestlib
+       #cgo LDFLAGS: -Wl,-rpath,${SRCDIR}/ctestlib
+       #cgo LDFLAGS: -L${SRCDIR}/ctestlib
+       #cgo LDFLAGS: -ltest
+
+       #include <test.h>
+    ,*/
+    import "C"
+
+    ...
+  #+END_SRC
+- Вызываю сишный код:
+  #+BEGIN_SRC go
+    func Somefn(...) {
+
+        a := uint256.NewInt().SetUint64(0x0fffffffffffffff)
+        b := uint256.NewInt().SetUint64(0xf0000000)
+        c := uint256.NewInt().SetUint64(0x0)
+
+        sum := int(C.sum(unsafe.Pointer(a), unsafe.Pointer(b), unsafe.Pointer(c)))
+        fmt.Print(sum, "\n\n")
+
+    }
+  #+END_SRC
+- Создаю необходимый заголовочный файл
+  #+BEGIN_SRC c
+    #ifndef _TESTLIB_H_
+    #define _TESTLIB_H_
+
+    #include <stdio.h>
+    #include <stdlib.h>
+    #include <stdint.h>
+    #include <immintrin.h> /* 256 AVX */
+
+    /* Declare a structure containing an array of 4 64-bit integers */
+    typedef struct uint256_t uint256_t;
+
+    /* Pedantic warnings are disabled in the expression that follows __extension__. */
+    __extension__ typedef unsigned __int128 uint128;
+
+    struct uint256_t {
+        uint64_t parts[4];
+    };
+
+    /* __extension__ typedef u128 uu128; */
+
+    typedef union {
+        uint8_t u8[8];
+        uint64_t u64[2];
+        struct {
+            uint64_t lo;
+            uint64_t hi;
+        } lohi;
+    } u128;
+
+    int sum(void *a, void *b, void *res);
+
+    /* 256bit mul,add :  http://locklessinc.com/articles/256bit_arithmetic/ */
+    #endif
+  #+END_SRC
+- Создаю Makefile с целями сборки и дизассемблирования
+  #+BEGIN_SRC sh
+    .PHONY: all c go run env
+
+    TESTLIBPATH="./ctestlib"
+
+    all: c
+
+    env:
+        docker build --tag cgo .
+        docker run --rm -ti -v $(shell pwd):/src cgo
+
+    c:
+        gcc -mbmi2 -O3 -c -Wall -Wextra -pedantic -Werror -fpic -o ${TESTLIBPATH}/test.o ${TESTLIBPATH}/test.c
+        gcc -shared -o ${TESTLIBPATH}/libtest.so ${TESTLIBPATH}/test.o
+
+    bench:
+        go test /home/rigidus/src/1inch/pathfinder.1inch.exchange/protocols/base/unoswap/mymarket_test.go -test.v -test.bench 'BenchmarkMarket_MyGetReturn' -test.run ^$ -test.cpuprofile cpu.prof
+
+    dis:
+        objdump -d -S -l ${TESTLIBPATH}/libtest.so > ${TESTLIBPATH}/libtest.asm
+
+    clean:
+        rm ${TESTLIBPATH}/libtest.so
+        rm ${TESTLIBPATH}/test.o
+        rm ${TESTLIBPATH}/libtest.asm
+
+    go:
+        go build -o app *.go
+
+    run:
+        ./app
+  #+END_SRC
+- Создаю сишный код с ассемблерными вставками
+  #+BEGIN_SRC c
+    #include "test.h"
+    #include <stdio.h>
+
+    void show (void *par, int idx) {
+        for (int i = idx/8-1; i >= 0; i--) {
+            printf("%02X",  (0xff & ((char *)par)[i]));
+            if ((0xFC & i) == i) {
+                printf("`");
+            }
+        }
+        printf("\n");
+    }
+
+    int sum(void *par1, void *par2, void *res) {
+
+        /* uint64_t msr1; */
+        /* uint64_t msr2; */
+
+        /* asm volatile ( "rdtsc\n\t"              // Returns the time in EDX:EAX. */
+        /*                "shl $32, %%rdx\n\t"     // Shift the upper bits left. */
+        /*                "or %%edx, %%eax"        // 'Or' in the lower bits. */
+        /*                : "=a" (msr1) */
+        /*                : */
+        /*                : "rdx"); */
+
+        show(par1, 64);
+        show(par2, 64);
+
+        /* uint128  prod; */
+        uint64_t hi, lo;
+
+        /* prod = aa * bb ; */
+        /* show(&prod, 128); */
+
+        __asm__ volatile ( "mov   %[aa], %%rax   \n"
+                           "mov   %[bb], %%rdx   \n"
+                           "imul  %%rdx          \n"
+                           "mov   %%rdx, %[hi]   \n"
+                           "mov   %%rax, %[lo]   \n"
+                           : [hi] "=m" (hi), [lo] "=m" (lo)
+                           : [aa] "m" (*((uint64_t *)par1)),
+                             [bb] "m" (*((uint64_t *)par2))
+                           : "rax", "rdx"
+                           );
+
+        ((u128 *)res)->u64[0] = lo;
+        ((u128 *)res)->u64[1] = hi;
+
+        show(&hi, 64);
+        show(&lo, 64);
+
+        show(res, 128);
+
+        /* /\* Возможно нужна псевдоссылка на первый асмблок *\/ */
+        /* asm volatile ( "rdtsc\n\t"              // Returns the time in EDX:EAX. */
+        /*                "shl $32, %%rdx\n\t"     // Shift the upper bits left. */
+        /*                "or %%edx, %%eax"        // 'Or' in the lower bits. */
+        /*                : "=a" (msr2) */
+        /*                : */
+        /*                : "rdx"); */
+
+        /* /\* _mm256_zeroupper(); *\/ */
+        /* return msr2-msr1; */
+        return 0;
+    }
+  #+END_SRC
+
+Полезные ссылки:
+- https://gcc.gnu.org/onlinedocs/gcc/Extended-Asm.html#Extended-Asm
+- best source http://locklessinc.com/articles/256bit_arithmetic/
+- https://stackoverflow.com/questions/14197998/c-typedef-union
+- https://stackoverflow.com/questions/32540740/intrinsics-for-128-multiplication-and-division/32818743#32818743
+- https://stackoverflow.com/questions/59652546/imul-in-64-assembly
+- https://hjlebbink.github.io/x86doc/html/IMUL.html
+- https://stackoverflow.com/questions/29206981/intrinsic-for-the-mulx-instruction
+- https://stackoverflow.com/questions/32540740/intrinsics-for-128-multiplication-and-division
+- https://www.codeproject.com/articles/874396/crunching-numbers-with-avx-and-avx
+- https://defuse.ca/big-number-calculator.htm
+- https://www.agner.org/optimize/optimizing_assembly.pdf
+- https://www.intel.com/content/www/us/en/docs/intrinsics-guide/index.html#cats=Load&techs=AVX2
+- https://habr.com/ru/post/99367/
+- https://codeforces.com/blog/entry/96759
+- https://github.com/kth-competitive-programming/kactl/blob/main/doc/modmul-proof.pdf
+- https://www.cs.virginia.edu/~cr4bd/3330/F2018/simdref.html
+- https://cs.lmu.edu/~ray/notes/gasexamples/
+- https://stackoverflow.blog/2020/07/08/improving-performance-with-simd-intrinsics-in-three-use-cases/
+
+* How I can call GO-function and use GO-data from my Go-assembly code?
 
 Если в пакете есть какие-либо файлы ~.s~, то ~go build~ укажет
 компилятору создать специальный заголовок с именем ~go_asm.h~, который
